add side bar menu

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -17,6 +17,19 @@ https://coreui.io/docs/components/sidebar/
         </a>
     </li>
 
+     <li class="c-sidebar-nav-item">
+        <a class="c-sidebar-nav-link" matRipple routerLink="books" routerLinkActive="c-active">
+            <!-- fontawesome icon -->
+            <i class="c-sidebar-nav-icon icon-book-open"></i> Books
+        </a>
+    </li>
+      <li class="c-sidebar-nav-item">
+        <a class="c-sidebar-nav-link" matRipple routerLink="book/create" routerLinkActive="c-active">
+            <!-- fontawesome icon -->
+            <i class="c-sidebar-nav-icon icon-book-open"></i> Create Book
+        </a>
+    </li>
+
     <li class="c-sidebar-nav-item">
         <a class="c-sidebar-nav-link" matRipple routerLinkActive="c-active" (click)="logout()">
             <!-- fontawesome icon -->
