--- a/src/app/modules/book-list/book-create/book-create.component.html
+++ b/src/app/modules/book-list/book-create/book-create.component.html
@@ -1,5 +1,5 @@
 <div class="container bootstrap snippets bootdey">
-    <h1 class="text-primary"><span class="glyphicon glyphicon-user"></span>Create Book</h1>
+    <h1 class="text-info"><span class="glyphicon glyphicon-user"></span>Create Book</h1>
       <hr>
 	<div class="row">
       <!-- left column -->
@@ -9,24 +9,24 @@
       </div>
       
       <div class="col-md-9 personal-info">
-        <!-- <div class="alert alert-info alert-dismissable">
+        <div class="col-md-8 alert alert-success alert-dismissable" *ngIf="submitted && success">
           <a class="panel-close close" data-dismiss="alert">×</a> 
-          <i class="fa fa-coffee"></i>
-          This is an <strong>.alert</strong>. Use this to show important messages to the user.
-        </div> -->
+          <i class="fa fa-book"></i>
+          Book Created Successfully.
+        </div>
         <!-- <h3>Book info</h3> -->
         
         <form class="form-horizontal" [formGroup]="form" (ngSubmit)="submitForm()" role="form">
           
             <div class="form-group">
-            <div class="col-md-4 mb-2"> 
-              <!-- <label class="col-lg-3 control-label">Book Image</label> -->
+            <div class="col-md-8 mb-2 imageDiv"> 
+              <label class="col-lg-3 control-label">Book Image</label>
               <input type="file" (change)="uploadFile($event)" [ngClass]="{ 'is-invalid': f.image.errors }">
               <div *ngIf="submitted && f.image.errors" class="invalid-feedback">
                 <div *ngIf="f.image.errors.required">Image is required</div>
             </div>
             </div>
-            <label class="col-lg-3 control-label">Book Title</label>
+            <label class="col-lg-12 control-label">Book Title</label>
             <div class="col-lg-8">
               <input class="form-control" type="text" placeholder="Enter Book Title" formControlName="title" [ngClass]="{ 'is-invalid': submitted && f.title.errors }" formControlName="title" ngModel [title]="true">
               <div *ngIf="submitted && f.title.errors" class="invalid-feedback">
@@ -55,9 +55,11 @@
               <div *ngIf="f.author.errors.required">Author is required</div>
           </div>
           </div>
+          <div class="col-lg-8">
           <button class="btn btn-danger btn-block">
             Create Book
         </button>
+      </div>
         </form>
       </div>
   </div>
