--- a/src/app/modules/book-list/book-list.component.html
+++ b/src/app/modules/book-list/book-list.component.html
@@ -1,3 +1,4 @@
+<a routerLink="/dashboard/book/create" class="btn btn-primary create_book"><i class="fa fa-plus"></i> New Book</a>
 <table class="table table-hover">
     <thead>
       <tr>
@@ -14,11 +15,12 @@
         <th scope="row">{{i+1}}</th>
         <td><img src="{{ImgUrl}}/{{book.image}}" width="50px" height="50px"/></td>
         <td>{{book.title | titlecase }}</td>
-        <td>{{book.description}}</td>
+        <td [innerHTML]="book.description"></td>
         <td>{{book.author}}</td>
        
-        <td><button class="btn btn-danger" (click)= "deleteBook(book._id)"><i class="fa fa-fw fa-trash"></i></button><a class="btn btn-info" routerLink=""><i class="fa fa-edit"></i></a></td>
+        <td><button class="btn btn-danger" (click)= "deleteBook(book._id)"><i class="fa fa-fw fa-trash"></i></button>
+        <a [routerLink]="[ '/dashboard/editBook',book._id]" class="btn btn-info ml-1"><i class="fa fa-fw fa-edit"></i></a></td>
       </tr>
     
     </tbody>
-  </table>
+  </table> 
