--- a/src/app/modules/book-list/edit-book/edit-book.component.html
+++ b/src/app/modules/book-list/edit-book/edit-book.component.html
@@ -1,52 +1,68 @@
 <div class="container bootstrap snippets bootdey">
-    <h1 class="text-primary"><span class="glyphicon glyphicon-user"></span>Edit Profile</h1>
-      <hr>
-	<div class="row">
-      <!-- left column -->
-      <div class="col-md-3">
-        <div class="text-center">
-          <img src="//placehold.it/100" class="avatar img-circle" alt="avatar">
-          <h6>Upload a different photo...</h6>
-          
-          <input type="file" class="form-control">
-        </div>
+  <h1 class="text-info mb-2"><span class="glyphicon glyphicon-user"></span>Edit book Info</h1>
+    <hr>
+<div class="row">
+    <!-- left column -->
+    <div class="col-md-3">
+      <img [src]="imageSrc" *ngIf="imageSrc" style="height: 100px; width:100px">
+      <img src="{{ImgUrl}}{{book?.image}}" *ngIf="!imageSrc"  style="height: 100px; width:100px">
+      <!-- <h6 *ngIf="imageSrc">Upload a different photo...</h6> -->
+    </div>
+    
+    <div class="col-md-8 personal-info">
+      <div class="alert alert-success alert-dismissable" *ngIf="submitted && success">
+        <a class="panel-close close" data-dismiss="alert">×</a> 
+        <i class="fa fa-coffee"></i>
+       Book update Successfully.
       </div>
+      <!-- <h3>Book info</h3> -->
       
-      <!-- edit form column -->
-      <div class="col-md-9 personal-info">
-        <!-- <div class="alert alert-info alert-dismissable">
-          <a class="panel-close close" data-dismiss="alert">×</a> 
-          <i class="fa fa-coffee"></i>
-          This is an <strong>.alert</strong>. Use this to show important messages to the user.
-        </div> -->
-        <h3>Book info</h3>
+      <form class="form-horizontal" [formGroup]="edit_book_form" (ngSubmit)="submitForm()" role="form">
         
-        <form class="form-horizontal" role="form">
           <div class="form-group">
-            <label class="col-lg-3 control-label">Book Title</label>
-            <div class="col-lg-8">
-              <input class="form-control" type="text" placeholder="Enter Book Title">
+            <div class="col-md-8 mb-2 imageDiv"> 
+              <label class="col-lg-3 control-label">Book Image</label>
+              <input type="file" (change)="uploadFile($event)" [ngClass]="{ 'is-invalid': f.image.errors }">
+              <div *ngIf="submitted && f.image.errors" class="invalid-feedback">
+                <div *ngIf="f.image.errors.required">Image is required</div>
             </div>
-          </div>
-          <div class="form-group">
-            <label class="col-lg-3 control-label">Description:</label>
-            <div class="col-lg-8">
-                <kendo-editor
-                [value]="value"
-                (valueChange)="valueChange($event)"
-                style="height: 400px;"
-              ></kendo-editor>
             </div>
+          <label class="col-lg-3 control-label">Book Title</label>
+          <div class="col-lg-8">
+            <input class="form-control" type="text" formControlName="title" [ngClass]="{ 'is-invalid': submitted && f.title.errors }" value="{{book?.title}}">
+            <div *ngIf="submitted && f.title.errors" class="invalid-feedback">
+              <div *ngIf="f.title.errors.required">Title is required</div>
           </div>
-          <div class="form-group">
-            <label class="col-lg-3 control-label">Author:</label>
-            <div class="col-lg-8">
-              <input class="form-control" type="text" placeholder="Enter Book Author">
-            </div>
           </div>
-        <button (submit) ="storeBook()">Create Book</button>
-        </form>
+        </div>
+        <div class="form-group">
+          <label class="col-lg-3 control-label">Description:</label>
+          <div class="col-lg-8">
+              <kendo-editor
+              [value]="book?.description"
+              (valueChange)="valueChange($event)"
+              style="height: 400px;"
+              formControlName="description"
+              [ngClass]="{ 'is-invalid': f.description.errors }"
+            ></kendo-editor>
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-lg-3 control-label">Author:</label>
+          <div class="col-lg-8">
+            <input class="form-control" type="text" formControlName="author" placeholder="Enter Book Author"  [ngClass]="{ 'is-invalid': submitted && f.author.errors }" value="{{book?.author}}">
+          </div>
+          <div *ngIf="submitted && f.author.errors" class="invalid-feedback">
+            <div *ngIf="f.author.errors.required">Author is required</div>
+        </div>
+        </div>
+        <div class="col-lg-8">
+          <button class="btn btn-danger btn-block">
+            Update Book
+        </button>
       </div>
-  </div>
+      </form>
+    </div>
+</div>
 </div>
 <hr>
