--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,6 +1,3 @@
-<!--
-https://coreui.io/docs/components/sidebar/
--->
 <ul class="c-sidebar-nav">
     <li class="c-sidebar-nav-title">Admin-Dashboard</li>
     <li class="c-sidebar-nav-item">
@@ -13,14 +10,14 @@ https://coreui.io/docs/components/sidebar/
     <li class="c-sidebar-nav-item">
         <a class="c-sidebar-nav-link" matRipple routerLink="users" routerLinkActive="c-active">
             <!-- fontawesome icon -->
-            <i class="c-sidebar-nav-icon fa fa-table"></i> Users
+            <i class="c-sidebar-nav-icon fa fa-users"></i> Users
         </a>
     </li>
 
      <li class="c-sidebar-nav-item">
         <a class="c-sidebar-nav-link" matRipple routerLink="books" routerLinkActive="c-active">
             <!-- fontawesome icon -->
-            <i class="c-sidebar-nav-icon icon-book-open"></i> Books
+            <i class="c-sidebar-nav-icon fa fa-book"></i> Books
         </a>
     </li>
     
@@ -28,14 +25,9 @@ https://coreui.io/docs/components/sidebar/
     <li class="c-sidebar-nav-item">
         <a class="c-sidebar-nav-link" matRipple routerLinkActive="c-active" (click)="logout()">
             <!-- fontawesome icon -->
-            <i class="c-sidebar-nav-icon icon-book-open"></i>  Logout
+            <i class="c-sidebar-nav-icon fa fa-sign-out"></i>  Logout
         </a>
     </li>
-
-    <!-- <li class="c-sidebar-nav-item">
-        <a class="c-sidebar-nav-link" routerLinkActive="c-active" matRipple ><i class="c-sidebar-nav-icon icon-book-open"></i> Logout
-        </a>
-    </li> -->
 
   
     <!-- allow hosted content -->
