--- a/src/app/layout/user-profile/user-profile.component.html
+++ b/src/app/layout/user-profile/user-profile.component.html
@@ -3,11 +3,11 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="profile-img">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS52y5aInsxSm31CvHOFHWujqUx_wWTS9iM6s7BAm21oEN_RiGoog" alt=""/>
-                    <div class="file btn btn-lg btn-primary">
+                    <img src="{{ImgUrl}}{{user?.profile_image}}" alt=""/>
+                    <!-- <div class="file btn btn-lg btn-primary">
                         Change Photo
                         <input type="file" name="file"/>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="col-md-6">
