Add Chapters and Journals

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -23,6 +23,13 @@
     
 
     <li class="c-sidebar-nav-item">
+        <a class="c-sidebar-nav-link" matRipple routerLink="journals" routerLinkActive="c-active">
+            <!-- fontawesome icon -->
+            <i class="c-sidebar-nav-icon fa fa-file"></i> Journals
+        </a>
+    </li>
+
+    <li class="c-sidebar-nav-item">
         <a class="c-sidebar-nav-link" matRipple routerLinkActive="c-active" (click)="logout()">
             <!-- fontawesome icon -->
             <i class="c-sidebar-nav-icon fa fa-sign-out"></i>  Logout
