--- a/src/app/layout/layout/layout.component.html
+++ b/src/app/layout/layout/layout.component.html
@@ -12,8 +12,9 @@
     </button>
 
     <div class="c-header-brand">
-      <strong>Admin</strong>-Template
+      <strong>Admin</strong>-Dashboard
     </div>
+    <a routerLink="/dashboard/admin/edit-profile" class="editprofile ml-auto mr-2"><i class="fa fa-edit mr-1"></i> <strong>Edit Profile</strong></a>
   </header>
 
   <div class="c-body">
