--- a/src/app/modules/admin-edit-profile/admin-edit-profile.component.scss
+++ b/src/app/modules/admin-edit-profile/admin-edit-profile.component.scss
@@ -1335,6 +1335,7 @@ a.text-white:focus {
   transition: all .15s ease;
   transform: translate(-50%, -30%);
   border-radius: .375rem;
+  height: 180px !important;
 }
 
 .card-profile-image img:hover {
@@ -1620,7 +1621,8 @@ textarea[resize='horizontal'] {
   left: 0;
   width: 100%;
   height: 100%;
-  transition: all .15s ease;
+  transition: all 0.15s ease;
+  background: #0000006b;
 }
 
 @media screen and (prefers-reduced-motion: reduce) {
@@ -1801,4 +1803,46 @@ p {
 
 #navbar .navbar {
   margin-bottom: 20px;
+}
+select.form-select {
+  box-shadow: 0 1px 3px rgb(50 50 93 / 15%), 0 1px 0 rgb(0 0 0 / 2%);
+  background: #fff;
+  border: none;
+  min-height: 45px;
+  border-radius: 5px;
+  padding: 10px 0 10px 10px;
+  width: 100%;
+  color: #8898aa;
+}
+select:focus, select:focus-visible {
+  border: none !important;
+}
+.add-icon-edit-profilt {
+  position: relative;
+  left: 84px;
+  top: 60px;
+  right: 0;
+  margin: auto;
+  max-width: 43px;
+}
+.edit-file {
+    opacity: 0;
+    position: relative;
+    z-index: 9999;
+}
+.edit-file input[type="file"] {
+  height: 38px;
+  width: 35px;
+}
+.pen-icon {
+  position: absolute;
+    max-width: -webkit-fit-content;
+    max-width: -moz-fit-content;
+    max-width: fit-content;
+    background: #3c4b64;
+    padding: 9px;
+    top: 0;
+    font-size: 16px;
+    color: white;
+    border-radius: 50%;
 }
