--- a/src/app/layout/user-profile/user-profile.component.html
+++ b/src/app/layout/user-profile/user-profile.component.html
@@ -2,13 +2,13 @@
     <form method="post">
         <div class="row">
             <div class="col-md-4">
-                <div class="profile-img">
+                <div class="profile-img" *ngIf="user?.profile_image">
                     <img src="{{ImgUrl}}{{user?.profile_image}}" alt=""/>
-                    <!-- <div class="file btn btn-lg btn-primary">
-                        Change Photo
-                        <input type="file" name="file"/>
-                    </div> -->
+                   
                 </div>
+                <div class="profile-img" *ngIf="!user?.profile_image">
+                    <img src="https://st4.depositphotos.com/14953852/24787/v/600/depositphotos_247872612-stock-illustration-no-image-available-icon-vector.jpg" alt=""/>
+               </div>
             </div>
             <div class="col-md-6">
                 <div class="profile-head">
