--- a/src/app/modules/book-list/book-create/book-create.component.scss
+++ b/src/app/modules/book-list/book-create/book-create.component.scss
@@ -8,10 +8,22 @@
 }
 .imageDiv {
     background: #f5f5f5;
-    padding: 5px 0;
+    padding: 10px 0;
     color: #333;
 }
+.snippets h1{
+    color: #3c4b64 !important;
+    font-weight: 500;
+}
 
+// .form-control {
+//     background: #3c4b64a6 !important;
+//     border: 1px solid #3c4b64 !important;
+//     box-shadow: 0 1px 1px #313131 !important;
+// }
+// .form-control::placeholder{
+//     color: #fff;
+// }
 .text-info{
 
     margin: 20px 0 16px;
