--- a/src/app/layout/layout/layout.component.html
+++ b/src/app/layout/layout/layout.component.html
@@ -6,24 +6,30 @@
     https://coreui.io/docs/layout/overview/
 -->
 <div class="c-wrapper">
-  <header class="c-header c-header-light c-header-fixed c-header-shadow">    
+  <header class="c-header c-header-light c-header-fixed">    
     <button matRipple class="c-header-toggler" type="button" (click)="sidebar.toggle()">
       <span class="c-header-toggler-icon"></span>
     </button>
 
     <div class="c-header-brand">
-      <strong>Admin</strong>-Dashboard
+      <strong>Journal list</strong>-Dashboard
     </div>
-    <a routerLink="/dashboard/admin/edit-profile" class="editprofile ml-auto mr-2"><i class="fa fa-edit mr-1"></i> <strong>Edit Profile</strong></a>
+    <!-- <a routerLink="/dashboard/admin/edit-profile" class="editprofile ml-auto mr-2"><i class="fa fa-edit mr-1"></i> <strong>Edit Profile</strong></a> -->
+    <div class="dropdown mr-3">
+      <button class="btn dropdown-toggle" type="button" data-toggle="dropdown" (click) = "dropdownHandler()"><img src="{{profile_image}}/{{user?.profile_image}}" class="img-profile" alt="">{{user?.name}} <span class="caret"></span></button>
+      <ul class="dropdown-menu {{isOpen ? 'show':''}}">
+        <li><a routerLink="/dashboard/admin/edit-profile">Edit Profile</a></li>
+        <li><a (click)="logout()" style="cursor: pointer;">Logout</a></li>
+      </ul>
+    </div>
   </header>
 
   <div class="c-body">  
-    <div class="row mx-2" *ngIf="this.router.url !=='/dashboard'">
-      <div class="col-md-12 text-left mt-3">
-        <button (click)="backClicked()" class="btn btn-dark"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</button>
+    <div class="row back-btn mx-2" *ngIf="this.router.url !=='/dashboard'">
+      <div class="col-md-12 text-left">
+        <button (click)="backClicked()" class="btn btn-info"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</button>
       </div>       
-    </div>  
-    <hr class="w-100">       
+    </div>        
     <router-outlet></router-outlet>    
   </div>
 </div>
