--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -29,12 +29,12 @@
         </a>
     </li>
 
-    <li class="c-sidebar-nav-item">
+    <!-- <li class="c-sidebar-nav-item">
         <a class="c-sidebar-nav-link" matRipple routerLinkActive="c-active" (click)="logout()">
-            <!-- fontawesome icon -->
+
             <i class="c-sidebar-nav-icon fa fa-sign-out"></i>  Logout
         </a>
-    </li>
+    </li> -->
 
   
     <!-- allow hosted content -->
