--- a/src/app/layout/user-profile/user-profile.component.html
+++ b/src/app/layout/user-profile/user-profile.component.html
@@ -35,7 +35,7 @@
         </div>
         <div class="row">
             <div class="col-md-4">
-                <div class="profile-work">
+                <!-- <div class="profile-work">
                     <p>WORK LINK</p>
                     <a href="">Website Link</a><br/>
                     <a href="">Bootsnipp Profile</a><br/>
@@ -46,7 +46,7 @@
                     <a href="">WordPress</a><br/>
                     <a href="">WooCommerce</a><br/>
                     <a href="">PHP, .Net</a><br/>
-                </div>
+                </div> -->
             </div>
             <div class="col-md-8">
                 <div class="tab-content profile-tab" id="myTabContent">
