--- a/src/app/modules/book-list/book-create/book-create.component.html
+++ b/src/app/modules/book-list/book-create/book-create.component.html
@@ -4,7 +4,7 @@
 	<div class="row">
       <!-- left column -->
       <div class="col-md-3">
-        <img [src]="imageSrc" *ngIf="imageSrc" style="height: 100px; width:100px">
+        <img [src]="imageSrc" *ngIf="imageSrc" style="height: auto; width:100%">
         <h6 *ngIf="imageSrc">Upload a different photo...</h6>
       </div>
       
@@ -14,20 +14,22 @@
           <i class="fa fa-book"></i>
           Book Created Successfully.
         </div>
-        <!-- <h3>Book info</h3> -->
+        <!-- <h3>Book info</h3> --> 
         
         <form class="form-horizontal" [formGroup]="form" (ngSubmit)="submitForm()" role="form">
           
             <div class="form-group">
-            <div class="col-md-8 mb-2 imageDiv"> 
-              <label class="col-lg-3 control-label">Book Image</label>
+            <div class="col-md-12 mb-3"> 
+              <div class="choose-image p-2 imageDiv">
+              <!-- <label class="col-lg-3 control-label">Book Image</label> -->
               <input type="file" (change)="uploadFile($event)" [ngClass]="{ 'is-invalid': f.image.errors }">
               <div *ngIf="submitted && f.image.errors" class="invalid-feedback">
                 <div *ngIf="f.image.errors.required">Image is required</div>
+              </div>
             </div>
             </div>
             <label class="col-lg-12 control-label">Book Title</label>
-            <div class="col-lg-8">
+            <div class="col-lg-12">
               <input class="form-control" type="text" placeholder="Enter Book Title" formControlName="title" [ngClass]="{ 'is-invalid': submitted && f.title.errors }" formControlName="title" ngModel [title]="true">
               <div *ngIf="submitted && f.title.errors" class="invalid-feedback">
                 <div *ngIf="f.title.errors.required">Title is required</div>
@@ -36,7 +38,7 @@
           </div>
           <div class="form-group">
             <label class="col-lg-3 control-label">Description:</label>
-            <div class="col-lg-8">
+            <div class="col-lg-12">
                 <kendo-editor
                 [value]="value"
                 (valueChange)="valueChange($event)"
@@ -48,14 +50,14 @@
           </div>
           <div class="form-group">
             <label class="col-lg-3 control-label">Author:</label>
-            <div class="col-lg-8">
+            <div class="col-lg-12">
               <input class="form-control" type="text" formControlName="author" placeholder="Enter Book Author"  [ngClass]="{ 'is-invalid': submitted && f.author.errors }">
             </div>
             <div *ngIf="submitted && f.author.errors" class="invalid-feedback">
               <div *ngIf="f.author.errors.required">Author is required</div>
           </div>
           </div>
-          <div class="col-lg-8">
+          <div class="col-lg-12">
           <button class="btn btn-danger btn-block">
             Create Book
         </button>
