--- a/src/app/modules/journals/journals.component.html
+++ b/src/app/modules/journals/journals.component.html
@@ -1,6 +1,6 @@
-<h1 class="text-info mb-2 mt-2 ml-2"><span class="glyphicon glyphicon-user"></span>Journal List</h1>
-    <hr>
-<table class="table table-hover">
+<br>
+<div class="cstm-tbl" style="margin:0 10px">
+<table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover table-bordered">
     <thead>
       <tr>
         <th scope="col">#</th>
@@ -19,4 +19,4 @@
       </tr>
     
     </tbody>
-  </table>
+  </table></div>
