--- a/src/app/modules/edit-user/edit-user.component.html
+++ b/src/app/modules/edit-user/edit-user.component.html
@@ -8,13 +8,11 @@
       <div class="container-fluid d-flex align-items-center">
         <div class="row">
           <div class="col-lg-12 col-md-12">
-            <h1 class="display-2 text-white">Add a new user</h1>
-            <!-- <a href="#!" class="btn btn-info">Edit profile</a> -->
+            <h1 class="display-2 text-white">Hello,{{user?.name}}</h1>
           </div>
         </div>
       </div>
     </div>
-    <!-- Page content -->
     <div class="container-fluid mt--7">
       <div class="row">
         <div class="col-xl-12 order-xl-1">
@@ -25,33 +23,24 @@
                   <h3 class="mb-0">My account</h3>
              </div>
                 <div class="col-4 text-right">
-                  <!-- <a href="#!" class="btn btn-sm btn-primary">Settings</a> --> 
                 </div>
               </div>
             </div>
             <div class="card-body">
-              <form [formGroup]="createUser" (ngSubmit)="saveUser()">                
+              <form [formGroup]="editUser" (ngSubmit)="updateUser()">                
                 <h6 class="heading-small text-muted mb-4">User information</h6>
                 <div class="pl-lg-4">
-                  <!-- <div class="row">
-                  <div class="col-md-6">
-                    <div class="form-group focused">
-                      <label class="form-control-label" for="input-username">Upload Profile Image</label>
-                      <input type="file" id="input-username" formControlName="name" class="form-control form-control-alternative" placeholder="Name" value="{{user?.name}}"/>
-                    </div>
-                  </div>
-                </div> -->
                   <div class="row">
                     <div class="col-lg-6">
                       <div class="form-group focused">
                         <label class="form-control-label" for="input-username">Name</label>
-                        <input type="text" id="input-username" formControlName="name" class="form-control form-control-alternative" placeholder="Name"/>
+                        <input type="text" id="input-username" value="{{user?.name}}" formControlName="name" class="form-control form-control-alternative" placeholder="Name"/>
                       </div>
                     </div>
                     <div class="col-lg-6">
                       <div class="form-group">
                         <label class="form-control-label" for="input-email">Email address</label>
-                        <input type="email" id="input-email" formControlName="email" class="form-control form-control-alternative" placeholder="Enter your Email address"/>
+                        <input type="email" id="input-email" readonly value="{{user?.email}}" class="form-control form-control-alternative" placeholder="Enter your Email address"/>
                       </div>
                     </div>
                   </div>
@@ -61,37 +50,18 @@
                         <label class="form-control-label" for="input-first-name">Gender</label>
                         <!-- <input type="text" id="input-first-name" formControlName="gender" class="form-control form-control-alternative" placeholder="Gender" value="{{user?.gender | titlecase}}"/> -->
                         <select class="form-select" aria-label="Default select example" formControlName="gender">
-                          <option value="Male">Male</option>
-                          <option value="Female">Female</option>
-                        </select>
+                            <option value="Male" [selected] = "user?.gender === 'Male'">Male</option>
+                            <option value="Female" [selected] = "user?.gender === 'Female'">Female</option>
+                          </select>
                       </div>
                     </div>
                     <div class="col-lg-6">
                       <div class="form-group focused">
                         <label class="form-control-label" for="input-first-name">Mobile Number</label>
-                        <input type="text" id="input-first-name" formControlName="mobile_number" class="form-control form-control-alternative" placeholder="Enter your mobile number" value="{{user?.gender | titlecase}}"/>
+                        <input type="text" id="input-first-name" value="{{user?.mobile_number}}" formControlName="mobile_number" class="form-control form-control-alternative" placeholder="Enter your mobile number"/>
                         
                       </div>
                     </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-lg-6">
-                      <div class="form-group focused">
-                        <label class="form-control-label" for="input-first-name">Password</label>
-                        <input type="password" id="input-first-name" formControlName="password" class="form-control form-control-alternative" placeholder="Enter your Password" ngModel #password/>
-                        <input type="hidden" id="input-first-name" formControlName="user_role" value="user" class="form-control form-control-alternative" style="display: none;"/>
-                        
-                      </div>
-                    </div>
-                    <!-- <div class="col-lg-6">
-                      <div class="form-group focused">
-                        <label class="form-control-label" formControlName="confirmPassword" for="input-first-name">Confirm Password {{password.value}}</label>
-                        <input type="password" id="input-first-name"  class="form-control form-control-alternative" placeholder="Enter your Password" #confirmPassword/>
-                        <div *ngIf="password.value != confirmPassword.value">
-                          Confirm Password does not match
-                        </div>
-                      </div>
-                    </div> -->
                   </div>
                 </div>
                 <hr class="my-4">
@@ -101,14 +71,14 @@
                 <div class="pl-lg-4">
                   <div class="form-group focused">
                     <label>Address</label>
-                    <textarea rows="4" class="form-control form-control-alternative" placeholder="Please enter your address ..." formControlName="address"></textarea>
+                    <textarea rows="4" class="form-control form-control-alternative" placeholder="Please enter your address ..." formControlName="address"> {{user?.address}}</textarea>
                   </div>
                 </div>
                 
                 <div class="col-md-12">
-                  <button class="btn btn-default">Create User</button>
+                  <button class="btn btn-default">Update User</button>
                   <div class="alert alert-success mt-2" role="alert" *ngIf="this.success == true">
-                    User created Successfully.
+                    User updated Successfully.
                   </div>
                 </div>
               </form>
