--- a/src/app/modules/journals/journals.component.html
+++ b/src/app/modules/journals/journals.component.html
@@ -1,6 +1,6 @@
 <br>
 <div class="cstm-tbl" style="margin:0 10px">
-<table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover table-bordered">
+<table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover table-bordered table-responsive">
     <thead>
       <tr>
         <th scope="col">#</th>
@@ -20,3 +20,4 @@
     
     </tbody>
   </table></div>
+  <ngx-ui-loader></ngx-ui-loader>
